Most Operation endpoints implemented and working
POST operation and GET Operation not yet implemented correctly.
