# evechem_api/models/key_type.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class KeyType(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, permission: str=None):
+        """
+        KeyType - a model defined in Swagger
+
+        :param name: The name of this KeyType.
+        :type permission: str
+        """
+        self.swagger_types = {
+            'permission': str
+        }
+
+        self.attribute_map = {
+            'permission': 'permission'
+        }
+
+        self._permission = permission
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'KeyType':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The operation_name of this KeyType.
+        :rtype: KeyType
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def permission(self) -> str:
+        """
+        Gets the permission of this KeyType.
+
+        :return: The permission of this KeyType.
+        :rtype: str
+        """
+        return self._permission
+
+    @permission.setter
+    def permission(self, permission: str):
+        """
+        Sets the permission of this KeyType.
+
+        :param permission: The permission of this KeyType.
+        :type permission: str
+        """
+
+        self._permission = permission
+
+
